Prevent top-right text from overflowing and improve layout of .lowerdiv

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,11 @@
   margin: 0;
 }
 
+body {
+  position: relative;
+  background-color: green;
+}
+
 @font-face {
   font-family: Anton;
   src: url(Anton-Regular.ttf);
@@ -52,10 +57,20 @@ svg {
 }
 
 body {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+div.actualpage {
   background-color: #cccccc;
   display: flex;
   flex-direction: row;
-  width: max(900px, 90%);
+  width: 80%;
+  margin-top: 5%;
+  margin-bottom: 8%;
+  z-index: 1;
 }
 
 .rightsidediv {
@@ -65,15 +80,13 @@ body {
   justify-content: space-between;
 }
 
-#titletext {
+.textdiv {
   font-family: Helvetica, sans-serif;
   font-size: 2rem;
   font-weight: bold;
-}
-
-.textdiv {
+  background-color: burlywood;
   flex-grow: 1;
-  width: 100%;
+  max-width: 100%;
   padding-left: 3vw;
   padding-right: 6vw;
   margin-top: 10vw;
@@ -115,15 +128,23 @@ div.pword2 {
   display: flex;
   flex-direction: column;
   background-color: grey;
+  justify-content: space-around;
+  gap: 0.5rem;
+  padding-left: 1rem;
 }
 
 li > div {
   position: relative;
 }
 
-li {
+h2 {
+  padding-left: 1.3rem;
+}
+
+li + li {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 
 label {
@@ -136,11 +157,28 @@ ul {
   list-style-type: none;
 }
 
+input {
+  width: 90%;
+  height: 2rem;
+}
+
 form {
   display: flex;
   flex-direction: column;
 }
 
+.accountbutton {
+  font-size: 1.5rem;
+}
+
+.alreadyp {
+  font-size: 1.3rem;
+}
+
+.login {
+  font-size: 1.5rem;
+}
+
 li > div {
-  padding: 3rem;
+ padding: 3rem 2rem;
 }
